# microbox

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  emulator_config.h.in  microbox.ino  microbox_emulator.cpp  sketch.yaml  todo.md
archive/docs/microbox-prototype/: README.md
assets/stl-objects/: microbox-case-2.0.20251013-211225.FCBak  microbox-case-2.0.20251025-213652.FCBak  microbox-case-2.0.20251031-211543.FCBak  microbox-case-2.0.20251109-093429.FCBak  microbox-case-2.0.20260104-081149.FCBak  microbox-case-2.0.FCStd
clangd-config/: flip-clangd-config.sh
devkit/: trinkeycontroller.ino
docs/: 3d-printing.md  diy-guide.md  emulator.md  gameplay-overview.md  readme-in-progress.md  tft-espi-display-library-configuration.md  todo.md  travel-case.md
docs/archive/microbox-prototype/: 3d-printing.md  README.md  diy-guide.md
lopaka-backup/: README.md  power_off.cpp
scripts/: build-emulator.sh  change-build-target.sh  compile-target.sh  count-lines.sh  debug-build-emulator.sh
scripts/clangd/: clangd-emulator  flip-config.sh
scripts/sketch/: flip-config.sh  sketch-esp32.yaml
src/: application_executor.hpp  menu.cpp  menu.hpp
src/apps/: app_menu.cpp  app_menu.hpp  brightness.cpp  brightness.hpp  display_scale.cpp  display_scale.hpp  geolocation.cpp  geolocation.hpp  power.cpp  power.hpp  random_seed_picker.cpp  random_seed_picker.hpp  settings.cpp  settings.hpp  sleep.cpp  weather.cpp  weather.hpp  wifi.cpp  wifi.hpp
src/common/: color.cpp  color.hpp  common_transitions.cpp  common_transitions.hpp  configuration.cpp  configuration.hpp  constants.cpp  constants.hpp  font_size.hpp  grid.cpp  grid.hpp  logging.cpp  maths_utils.hpp  point.cpp  point.hpp  profiling.hpp  string_enum.hpp  thumbnail.hpp  user_interface.cpp  user_interface.hpp  user_interface_customization.cpp  user_interface_customization.hpp
src/common/platform/: platform.hpp
src/common/platform/arduino/: adafruit_mini_controller.cpp  adafruit_mini_controller.hpp  arduino_delay.cpp  arduino_http_client.cpp  arduino_http_client.hpp  arduino_time_provider.cpp  joystick_controller.hpp  lcd_24_display.cpp  lcd_24_display.hpp  lcd_display.cpp  lcd_display.hpp  lcd_display_1_69_inch.cpp  lcd_display_1_69_inch.hpp  lcd_display_2_4_inch.cpp  lcd_display_2_4_inch.hpp  persistent_storage.hpp  wifi_provider.cpp
src/common/platform/drivers/: input_shield.cpp  input_shield.hpp  joystick_controller.cpp  joystick_controller.hpp  keypad_controller.cpp  keypad_controller.hpp
src/common/platform/emulator/: emulated_wifi_provider.cpp  emulator_delay.cpp  emulator_http_client.cpp  emulator_time_provider.cpp  font_provider.cpp  sfml_display.cpp  sfml_display.hpp
src/common/platform/interface/: controller.cpp  controller.hpp  display.hpp  input.cpp  input.hpp  platform.hpp  wifi.cpp  wifi.hpp
src/games/: 2048.cpp  2048.hpp  application_executor.hpp  brightness.cpp  brightness.hpp  common_transitions.cpp  common_transitions.hpp  game_executor.cpp  game_executor.hpp  game_loop_simplification_prototype.cpp  game_menu.cpp  game_menu.hpp  game_of_life.cpp  game_of_life.hpp  minesweeper.cpp  minesweeper.hpp  random_seed_picker.cpp  random_seed_picker.hpp  settings.cpp  settings.hpp  sleep.cpp  sleep.hpp  snake.cpp  snake.hpp  snake_common.cpp  snake_common.hpp  snake_duel.cpp  snake_duel.hpp  sudoku.cpp  sudoku.hpp  sudoku_engine.cpp  sudoku_engine.hpp  sudoku_view.cpp  sudoku_view.hpp  uno_q_unwind_shim_prototype.cpp  wifi.cpp  wifi.hpp
src/lib/: GUI_Paint.cpp  GUI_Paint.h
src/lib/lcd_2_4_inch/: DEV_Config.cpp  GUI_Paint.cpp  GUI_Paint.h  font24CN.cpp  fonts.h
src/lib/waveshare_1_69_inch_lcd/: DEV_Config.cpp  DEV_Config.h  Debug.h  GUI_Paint.cpp  GUI_Paint.h  LCD_Driver.cpp  LCD_Driver.h
src/lib/waveshare_1_69_inch_lcd/fonts/: font12.cpp  font16.cpp  font20.cpp  font24.cpp  font24CN.cpp  font8.cpp  fonts.h
src/lib/waveshare_2_4_inch_lcd/: DEV_Config.cpp  DEV_Config.h  Debug.h  GUI_Paint.cpp  GUI_Paint.h  LCD_Driver.cpp  LCD_Driver.h
src/platform/: README.md  wifi_ssid_password_secrets.hpp
src/platform/boards/: README.md
src/platform/emulator/: emulated_wifi_provider.cpp  emulator_http_client.cpp  emulator_http_client.hpp  emulator_time_provider.cpp  font_provider.hpp  persistent_storage.hpp  persistent_storage.inl  sfml_action_controller.cpp  sfml_action_controller.hpp  sfml_asdf_controller.cpp  sfml_asdf_controller.hpp  sfml_awsd_controller.cpp  sfml_awsd_controller.hpp  sfml_controller.cpp  sfml_controller.hpp  sfml_display.cpp  sfml_display.hpp  sfml_hjkl_controller.cpp  sfml_hjkl_controller.hpp
src/platform/interface/: color.cpp  color.hpp  controller.hpp  display.hpp  http_client.hpp  input.hpp  persistent_storage.hpp  platform.hpp  power_manager.hpp  thumbnail.cpp  thumbnail.hpp  time_provider.hpp  wifi.hpp
tests/: CMakeLists.txt  test_2048.cpp  test_geolocation_api.cpp  test_weather_api.cpp
(+42 files in other folders)
